# dsa-judge-server

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  howto.md  pyproject.toml  readme.md  schema.json  task_schema.json  task_schema.yaml
db/: init.sql
langs/: Dockerfile.GCC  Dockerfile.binary-runner  build.sh
resource/: filecheck.sh
resource/ex1/: description.md
resource/ex1-1/: build.sh  compilecheck.sh  compilecheck.stdout  description.md  filecheck.arg  main_euclid.c
resource/ex1-1/testcases/: easy2.out  easy3.arg  easy3.out  easy4.arg  easy4.out  exception1.arg  exception1.err  exception2.arg  exception2.err  hard1.arg  hard1.out  prime1.out  prime2.arg  prime2.out  prime3.arg  prime3.out
resource/ex1-2/: Makefile  description.md
src/: .env  checker.py  judge.py  main.py  test_execute.py
src/db/: crud.py  database.py  models.py
src/dsa_judge_server/: __init__.py  execute.py  my_error.py
src/sandbox/: execute.py  my_error.py
src/sandbox_execution/: my_error.py
task_dir/sample/: helloworld.c  task.yaml  test0.out
