[project]
name = "dsa-judge-server"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Takuya Mizokami", email = "takoyaki65@users.noreply.github.com" }
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.3",
    "docker>=7.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dsa_judge_server"]
